@@ -8,29 +8,29 @@ package com.farao_community.farao.search_tree_rao.commons;
 
 import com.farao_community.farao.commons.EICode;
 import com.farao_community.farao.commons.Unit;
-import com.powsybl.glsk.commons.ZonalData;
 import com.farao_community.farao.data.crac_api.Crac;
 import com.farao_community.farao.data.crac_api.CracFactory;
 import com.farao_community.farao.data.crac_api.cnec.FlowCnec;
-import com.farao_community.farao.data.crac_api.threshold.BranchThresholdRule;
+import com.farao_community.farao.data.crac_api.cnec.Side;
 import com.farao_community.farao.data.crac_impl.utils.CommonCracCreation;
 import com.farao_community.farao.data.crac_impl.utils.NetworkImportsUtil;
-import com.powsybl.glsk.ucte.UcteGlskDocument;
 import com.farao_community.farao.rao_api.ZoneToZonePtdfDefinition;
 import com.farao_community.farao.sensitivity_analysis.SystematicSensitivityResult;
+import com.powsybl.glsk.commons.ZonalData;
+import com.powsybl.glsk.ucte.UcteGlskDocument;
 import com.powsybl.iidm.import_.Importers;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.sensitivity.SensitivityVariableSet;
 import org.junit.Before;
 import org.junit.Test;
 import org.mockito.Mockito;
-import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 
 import java.time.Instant;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import static com.farao_community.farao.data.crac_api.Instant.CURATIVE;
 import static com.farao_community.farao.data.crac_api.Instant.PREVENTIVE;
@@ -48,45 +48,41 @@ public class AbsolutePtdfSumsComputationTest {
     public void setUp() {
 
         systematicSensitivityResult = Mockito.mock(SystematicSensitivityResult.class);
-        Mockito.when(systematicSensitivityResult.getSensitivityOnFlow(Mockito.any(SensitivityVariableSet.class), Mockito.any(FlowCnec.class)))
+        Mockito.when(systematicSensitivityResult.getSensitivityOnFlow(Mockito.any(SensitivityVariableSet.class), Mockito.any(FlowCnec.class), Mockito.any(Side.class)))
             .thenAnswer(
-                new Answer<Double>() {
-                    @Override public Double answer(InvocationOnMock invocation) {
-                        SensitivityVariableSet linearGlsk = (SensitivityVariableSet) invocation.getArguments()[0];
-                        FlowCnec branchCnec = (FlowCnec) invocation.getArguments()[1];
-                        if (branchCnec.getId().contains("cnec1")) {
-                            switch (linearGlsk.getId().substring(0, EICode.EIC_LENGTH)) {
-                                case "10YFR-RTE------C":
-                                    return 0.1;
-                                case "10YBE----------2":
-                                    return 0.2;
-                                case "10YCB-GERMANY--8":
-                                    return 0.3;
-                                case "22Y201903145---4":
-                                    return 0.4;
-                                case "22Y201903144---9":
-                                    return 0.1;
-                                default:
-                                    return 0.;
-                            }
-                        } else if (branchCnec.getId().contains("cnec2")) {
-                            switch (linearGlsk.getId().substring(0, EICode.EIC_LENGTH)) {
-                                case "10YFR-RTE------C":
-                                    return 0.3;
-                                case "10YBE----------2":
-                                    return 0.3;
-                                case "10YCB-GERMANY--8":
-                                    return 0.2;
-                                case "22Y201903145---4":
-                                    return 0.1;
-                                case "22Y201903144---9":
-                                    return 0.9;
-                                default:
-                                    return 0.;
-                            }
-                        } else {
-                            return 0.;
+                (Answer<Double>) invocation -> {
+                    SensitivityVariableSet linearGlsk = (SensitivityVariableSet) invocation.getArguments()[0];
+                    FlowCnec branchCnec = (FlowCnec) invocation.getArguments()[1];
+                    if (branchCnec.getId().contains("cnec1")) {
+                        switch (linearGlsk.getId().substring(0, EICode.EIC_LENGTH)) {
+                            case "10YFR-RTE------C":
+                            case "22Y201903144---9":
+                                return 0.1;
+                            case "10YBE----------2":
+                                return 0.2;
+                            case "10YCB-GERMANY--8":
+                                return 0.3;
+                            case "22Y201903145---4":
+                                return 0.4;
+                            default:
+                                return 0.;
                         }
+                    } else if (branchCnec.getId().contains("cnec2")) {
+                        switch (linearGlsk.getId().substring(0, EICode.EIC_LENGTH)) {
+                            case "10YFR-RTE------C":
+                            case "10YBE----------2":
+                                return 0.3;
+                            case "10YCB-GERMANY--8":
+                                return 0.2;
+                            case "22Y201903145---4":
+                                return 0.1;
+                            case "22Y201903144---9":
+                                return 0.9;
+                            default:
+                                return 0.;
+                        }
+                    } else {
+                        return 0.;
                     }
                 });
     }
@@ -98,7 +94,7 @@ public class AbsolutePtdfSumsComputationTest {
         Network network = NetworkImportsUtil.import12NodesNetwork();
         ZonalData<SensitivityVariableSet> glskProvider = UcteGlskDocument.importGlsk(getClass().getResourceAsStream("/glsk/glsk_proportional_12nodes_with_alegro.xml"))
                 .getZonalGlsks(network, Instant.parse("2016-07-28T22:30:00Z"));
-        Crac crac = CommonCracCreation.create();
+        Crac crac = CommonCracCreation.create(Set.of(Side.LEFT, Side.RIGHT));
         List<ZoneToZonePtdfDefinition> boundaries = Arrays.asList(
                 new ZoneToZonePtdfDefinition("{FR}-{BE}"),
                 new ZoneToZonePtdfDefinition("{FR}-{DE}"),
@@ -107,11 +103,11 @@ public class AbsolutePtdfSumsComputationTest {
 
         // compute zToz PTDF sum
         AbsolutePtdfSumsComputation absolutePtdfSumsComputation = new AbsolutePtdfSumsComputation(glskProvider, boundaries, network);
-        Map<FlowCnec, Double> ptdfSums = absolutePtdfSumsComputation.computeAbsolutePtdfSums(crac.getFlowCnecs(), systematicSensitivityResult);
+        Map<FlowCnec, Map<Side, Double>> ptdfSums = absolutePtdfSumsComputation.computeAbsolutePtdfSums(crac.getFlowCnecs(), systematicSensitivityResult);
 
         // test results
-        assertEquals(0.6, ptdfSums.get(crac.getFlowCnec("cnec1basecase")), DOUBLE_TOLERANCE); // abs(0.1 - 0.2) + abs(0.1 - 0.3) + abs(0.3 - 0.2) + abs(0.2 - 0.1 - 0.3 + 0.4) = 0.1 + 0.2 + 0.1 + 0.2
-        assertEquals(0.9, ptdfSums.get(crac.getFlowCnec("cnec2basecase")), DOUBLE_TOLERANCE); // abs(0.3 - 0.3) + abs(0.3 - 0.2) + abs(0.2 - 0.3) + abs(0.3 - 0.9 - 0.2 + 0.1) = 0 + 0.1 + 0.1 + 0.7
+        assertEquals(0.6, ptdfSums.get(crac.getFlowCnec("cnec1basecase")).get(Side.LEFT), DOUBLE_TOLERANCE); // abs(0.1 - 0.2) + abs(0.1 - 0.3) + abs(0.3 - 0.2) + abs(0.2 - 0.1 - 0.3 + 0.4) = 0.1 + 0.2 + 0.1 + 0.2
+        assertEquals(0.9, ptdfSums.get(crac.getFlowCnec("cnec2basecase")).get(Side.RIGHT), DOUBLE_TOLERANCE); // abs(0.3 - 0.3) + abs(0.3 - 0.2) + abs(0.2 - 0.3) + abs(0.3 - 0.9 - 0.2 + 0.1) = 0 + 0.1 + 0.1 + 0.7
     }
 
     @Test
@@ -121,22 +117,22 @@ public class AbsolutePtdfSumsComputationTest {
         Network network = NetworkImportsUtil.import12NodesNetwork();
         ZonalData<SensitivityVariableSet> glskProvider = UcteGlskDocument.importGlsk(getClass().getResourceAsStream("/glsk/glsk_proportional_12nodes_with_alegro.xml"))
                 .getZonalGlsks(network, Instant.parse("2016-07-28T22:30:00Z"));
-        Crac crac = CommonCracCreation.create();
+        Crac crac = CommonCracCreation.create(Set.of(Side.LEFT, Side.RIGHT));
         List<ZoneToZonePtdfDefinition> boundaries = Arrays.asList(
                 new ZoneToZonePtdfDefinition("{FR}-{BE}"),
                 new ZoneToZonePtdfDefinition("{FR}-{DE}"),
                 new ZoneToZonePtdfDefinition("{DE}-{BE}"),
                 new ZoneToZonePtdfDefinition("{BE}-{22Y201903144---0}-{DE}+{22Y201903144---1}"), // wrong EIC for Alegro, only {BE}-{DE} will be taken into account
                 new ZoneToZonePtdfDefinition("{FR}-{ES}"), // ES doesn't exist in GLSK map, must be filtered
-                new ZoneToZonePtdfDefinition("{ES}-{DE}")); // ES doesn't exist in GLSK map, muste be filtered
+                new ZoneToZonePtdfDefinition("{ES}-{DE}")); // ES doesn't exist in GLSK map, must be filtered
 
         // compute zToz PTDF sum
         AbsolutePtdfSumsComputation absolutePtdfSumsComputation = new AbsolutePtdfSumsComputation(glskProvider, boundaries, network);
-        Map<FlowCnec, Double> ptdfSums = absolutePtdfSumsComputation.computeAbsolutePtdfSums(crac.getFlowCnecs(), systematicSensitivityResult);
+        Map<FlowCnec, Map<Side, Double>> ptdfSums = absolutePtdfSumsComputation.computeAbsolutePtdfSums(crac.getFlowCnecs(), systematicSensitivityResult);
 
         // Test that these 3 new boundaries are ignored (results should be the same as previous test)
-        assertEquals(0.5, ptdfSums.get(crac.getFlowCnec("cnec1basecase")), DOUBLE_TOLERANCE); // abs(0.1 - 0.2) + abs(0.1 - 0.3) + abs(0.3 - 0.2) + abs(0.2 - 0.3) = 0.1 + 0.2 + 0.1 + 0.1
-        assertEquals(0.3, ptdfSums.get(crac.getFlowCnec("cnec2basecase")), DOUBLE_TOLERANCE); // abs(0.3 - 0.3) + abs(0.3 - 0.2) + abs(0.2 - 0.3) + abs(0.3 - 0.2) = 0 + 0.1 + 0.1 + 0.1
+        assertEquals(0.5, ptdfSums.get(crac.getFlowCnec("cnec1basecase")).get(Side.RIGHT), DOUBLE_TOLERANCE); // abs(0.1 - 0.2) + abs(0.1 - 0.3) + abs(0.3 - 0.2) + abs(0.2 - 0.3) = 0.1 + 0.2 + 0.1 + 0.1
+        assertEquals(0.3, ptdfSums.get(crac.getFlowCnec("cnec2basecase")).get(Side.LEFT), DOUBLE_TOLERANCE); // abs(0.3 - 0.3) + abs(0.3 - 0.2) + abs(0.2 - 0.3) + abs(0.3 - 0.2) = 0 + 0.1 + 0.1 + 0.1
     }
 
     @Test
@@ -163,7 +159,7 @@ public class AbsolutePtdfSumsComputationTest {
                 .withNetworkElement("NNL2AA1  NNL3AA1  1")
                 .withInstant(PREVENTIVE)
                 .withOptimized(true)
-                .newThreshold().withRule(BranchThresholdRule.ON_LEFT_SIDE).withMax(1000.).withUnit(Unit.MEGAWATT).add()
+                .newThreshold().withSide(Side.LEFT).withMax(1000.).withUnit(Unit.MEGAWATT).add()
                 .add();
         crac.newFlowCnec()
                 .withId("cnec1-after-internal-contingency")
@@ -171,7 +167,7 @@ public class AbsolutePtdfSumsComputationTest {
                 .withInstant(CURATIVE)
                 .withContingency("contingency-on-internal-line")
                 .withOptimized(true)
-                .newThreshold().withRule(BranchThresholdRule.ON_LEFT_SIDE).withMax(1000.).withUnit(Unit.MEGAWATT).add()
+                .newThreshold().withSide(Side.RIGHT).withMax(1000.).withUnit(Unit.MEGAWATT).add()
                 .add();
         crac.newFlowCnec()
                 .withId("cnec1-after-contingency-on-xNode")
@@ -179,18 +175,17 @@ public class AbsolutePtdfSumsComputationTest {
                 .withInstant(CURATIVE)
                 .withContingency("contingency-on-xnode")
                 .withOptimized(true)
-                .newThreshold().withRule(BranchThresholdRule.ON_LEFT_SIDE).withMax(1000.).withUnit(Unit.MEGAWATT).add()
+                .newThreshold().withSide(Side.LEFT).withMax(1000.).withUnit(Unit.MEGAWATT).add()
                 .add();
-        List<ZoneToZonePtdfDefinition> boundaries = Arrays.asList(
-                new ZoneToZonePtdfDefinition("{BE}-{22Y201903144---9}"));
+        List<ZoneToZonePtdfDefinition> boundaries = List.of(new ZoneToZonePtdfDefinition("{BE}-{22Y201903144---9}"));
 
         // compute zToz PTDF sum
         AbsolutePtdfSumsComputation absolutePtdfSumsComputation = new AbsolutePtdfSumsComputation(glskProvider, boundaries, network);
-        Map<FlowCnec, Double> ptdfSums = absolutePtdfSumsComputation.computeAbsolutePtdfSums(crac.getFlowCnecs(), systematicSensitivityResult);
+        Map<FlowCnec, Map<Side, Double>> ptdfSums = absolutePtdfSumsComputation.computeAbsolutePtdfSums(crac.getFlowCnecs(), systematicSensitivityResult);
 
         // test results
-        assertEquals(0.1, ptdfSums.get(crac.getFlowCnec("cnec1-in-basecase")), DOUBLE_TOLERANCE); // abs(0.2 - 0.1)
-        assertEquals(0.1, ptdfSums.get(crac.getFlowCnec("cnec1-after-internal-contingency")), DOUBLE_TOLERANCE); // abs(0.2 - 0.1)
-        assertEquals(0.2, ptdfSums.get(crac.getFlowCnec("cnec1-after-contingency-on-xNode")), DOUBLE_TOLERANCE); // abs(0.2 - 0.0) PTDF of virtual hub is now 0
+        assertEquals(0.1, ptdfSums.get(crac.getFlowCnec("cnec1-in-basecase")).get(Side.LEFT), DOUBLE_TOLERANCE); // abs(0.2 - 0.1)
+        assertEquals(0.1, ptdfSums.get(crac.getFlowCnec("cnec1-after-internal-contingency")).get(Side.RIGHT), DOUBLE_TOLERANCE); // abs(0.2 - 0.1)
+        assertEquals(0.2, ptdfSums.get(crac.getFlowCnec("cnec1-after-contingency-on-xNode")).get(Side.LEFT), DOUBLE_TOLERANCE); // abs(0.2 - 0.0) PTDF of virtual hub is now 0
     }
 }
